--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>7.10.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>9.2.2</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
